<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vogella.android.quiz.Login"
    android:background="@drawable/background">

    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="64dp"
        android:ems="10"
        android:hint="@string/userNameText"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/username"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/passwordText"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="136dp"
        android:text="@string/loginText" />

    <TextView
        android:id="@+id/newUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="47dp"
        android:text="@string/addNewUser"
        android:textSize="24sp" />

    <RadioButton
        android:id="@+id/adminRB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/userRB"
        android:layout_alignBottom="@+id/userRB"
        android:layout_toEndOf="@+id/loginButton"
        android:text="@string/adminText" />

    <RadioButton
        android:id="@+id/userRB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_toStartOf="@+id/loginButton"
        android:text="@string/userText" />

</RelativeLayout>
